--- a/css/style.css
+++ b/css/style.css
@@ -763,6 +763,9 @@ iframe {
   background: linear-gradient(0deg, rgba(34, 77, 143, 0.40) 0%, rgba(34, 77, 143, 0.40) 100%);
   z-index: 1;
 }
+.events-section .events-item .full-link {
+  z-index: 2;
+}
 
 /* Category section Categories Home page and Catalog page */
 .category-section .categories {
@@ -892,11 +895,88 @@ iframe {
   text-decoration: underline;
 }
 
-/* News page */
-.news-page {
 
+/* Pagination pager */
+.pager {
+  display: flex;
+  margin: 60px 0;
+  padding: 0;
+  list-style: none;
+  justify-content: space-between;
+}
+.pager .pager-item {
+  height: 36px;
+  margin: auto 20px;
+  text-align: center;
+  transition: all .3s;
+}
+.pager .pager-item-previous,
+.pager .pager-item-next {
+  display: block;
+  width: 180px;
+  height: 72px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #BABABA;
+  border-radius: 20px;
+  transition: border-color .2s;
+}
+.pager .pager-item-previous:hover,
+.pager .pager-item-next:hover {
+  border-color: var(--blue-color);
+}
+.pager .pager-item-previous {
+  margin-left: 0;
+}
+.pager .pager-item-next {
+  margin-right: 0;
+}
+.pager .pager-item-previous .pager-item-link,
+.pager .pager-item-next .pager-item-link {
+  padding: 18px 0;
+}
+.pager .pager-item-link,
+.pager .pager-item-span {
+  display: block;
+  width: 100%;
+  height: 100%;
+  font-family: 'roboto-medium';
+  font-size: 24px;
+  color: #BABABA;
+  transition: color .2s;
+}
+.pager .numbers {
+  display: flex;
+}
+.pager .pager-item.active .pager-item-link,
+.pager .pager-item.active .pager-item-span {
+  color: var(--blue-color);
+  transition: color .2s;
+}
+.pager .pager-item:hover .pager-item-link,
+.pager .pager-item:hover .pager-item-span {
+  color: var(--blue-color);
 }
 
+/* News detail page */
+.news-detail-page .news-detail-title {
+  margin: 0 0 30px 0;
+  font-family: 'roboto-medium';
+  font-size: 28px;
+  line-height: 1.2;
+}
+.news-detail-page .news-detail-image {
+  width: 600px;
+  margin: 0 0 40px 0;
+  border-radius: 30px;
+  overflow: hidden;
+}
+.news-detail-page .news-detail-image img {
+  width: 100%;
+}
+.news-detail-page .news-detail-desciption {
+  font-size: 20px;
+}
 
 
 /* footer */
