--- a/css/style.css
+++ b/css/style.css
@@ -625,7 +625,7 @@ iframe {
   height: 41px;
   border-radius: 15px;
   background-color: var(--white-color);
-  font-size: 18px;
+  font-family: 'Roboto-Light';
   gap: 10px;
   z-index: 3;
   align-items: center;
@@ -977,6 +977,163 @@ iframe {
 .news-detail-page .news-detail-desciption {
   font-size: 20px;
 }
+
+/* Events page */
+.events-page .events {
+  display: grid;
+  gap: 24px;
+  grid-template-columns: repeat(3, 1fr);
+}
+.events-page .events-item {
+  display: flex;
+  flex-direction: column;
+  height: 520px;
+  border: 1px solid var(--text-color);
+  border-radius: 30px;
+  overflow: hidden;
+}
+.events-page .events-item .events-item-image-wrapper {
+  position: relative;
+  height: 250px;
+  border-radius: 30px;
+  overflow: hidden;
+  flex-shrink: 0;
+}
+.events-page .events-item .events-item__image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.events-page .events-item .events-item__date {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  display: flex;
+  width: 130px;
+  height: 41px;
+  border-radius: 15px;
+  background-color: var(--white-color);
+  font-family: 'Roboto-Light';
+  gap: 10px;
+  z-index: 3;
+  align-items: center;
+  justify-content: center;
+}
+.events-page .events-item .events-item__date::before {
+  content: '';
+  display: block;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: var(--blue-color);
+}
+.events-page .events-item .events-item__type {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  display: flex;
+  width: 110px;
+  height: 41px;
+  border-radius: 15px;
+  background-color: var(--white-color);
+  font-family: 'Roboto-Light';
+  gap: 10px;
+  z-index: 3;
+  align-items: center;
+  justify-content: center;
+}
+.events-page .events-item .events-item__type::before {
+  content: '';
+  display: block;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: var(--text-color);
+  font-family: 'Roboto-Light';
+}
+.events-page .events-item .events-item__time {
+  position: absolute;
+  bottom: 20px;
+  right: 30px;
+  display: flex;
+  width: 134px;
+  height: 41px;
+  border-radius: 10px;
+  background-color: var(--white-color);
+  font-family: 'Roboto-Light';
+  gap: 10px;
+  z-index: 3;
+  align-items: center;
+  justify-content: center;
+}
+.events-page .events-item .events-item__time::before {
+  content: '';
+  display: block;
+  width: 21px;
+  height: 21px;
+  background: url(../images/events-clock.png) center no-repeat;
+}
+.events-page .events-item .events-item__content {
+  position: relative;
+  height: 100%;
+  padding: 30px;
+}
+.events-page .events-item .events-item__title {
+  display: -webkit-box;
+  height: 58px;
+  margin: 0 0 10px 0;
+  font-family: 'roboto-medium';
+  font-size: 24px;
+  line-height: 1.2;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+.events-page .events-item .events-item__description {
+  display: -webkit-box;
+  height: 44px;
+  font-size: 18px;
+  line-height: 1.2;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+.events-page .events-item .events-item__filter {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, rgba(34, 77, 143, 0.40) 0%, rgba(34, 77, 143, 0.40) 100%);
+  z-index: 1;
+}
+.events-page .events-item .events-detail-btn {
+  position: absolute;
+  bottom: 30px;
+  left: 30px;
+  display: flex;
+  width: 190px;
+  height: 68px;
+  border-radius: 34px;
+  background-color: var(--blue-color);
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+}
+.events-page .events-item .events-detail-btn .events-detail-btn__text {
+  font-size: 20px;
+  color: var(--white-color);
+  transition: color .2s;
+}
+.events-page .events-item .events-detail-btn .events-detail-btn__image {
+  width: 36px;
+  height: 36px;
+  flex-shrink: 0;
+  transition: transform .2s;
+}
+
 
 
 /* footer */
