--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ iframe {
   margin: 0 0 40px 0;
   font-family: 'Roboto-SemiBold';
   font-size: 64px;
-  line-height: 1.3;
+  line-height: 1.1;
 }
 .page-title {
   margin: 0 0 80px 0;
@@ -345,7 +345,8 @@ iframe {
 }
 
 /* Brands section */
-.brands-section .brands {
+/*.brands-section .brands {*/
+.brands {
   display: flex;
   padding: 40px;
   border-radius: 30px;
@@ -353,7 +354,8 @@ iframe {
   gap: 20px;
   flex-wrap: wrap;
 }
-.brands-section .brands-item {
+/*.brands-section .brands-item {*/
+.brands-item {
   width: 355px;
   height: 200px;
   border-radius: 30px;
@@ -717,18 +719,18 @@ iframe {
 */
 
 /* Events section */
-.events-section .ep {
+.events-section .events {
   display: grid;
   gap: 24px;
   grid-template-columns: repeat(4, 1fr);
 }
-.events-section .ep-item {
+.events-section .events-item {
   position: relative;
   height: 600px;
   border-radius: 20px;
   overflow: hidden;
-}
-.events-section .ep-item .ep-item__title {
+}.
+.events-section .events-item .events-item__title {
   position: absolute;
   top: 30px;
   left: 0;
@@ -746,15 +748,15 @@ iframe {
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
-.events-section .ep-item .ep-item__image {
+.events-section .events-item .events-item__image {
   height: 100%;
 }
-.events-section .ep-item .ep-item__image img {
+.events-section .events-item .events-item__image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-.events-section .ep-item .ep-item__filter {
+.events-section .events-item .events-item__filter {
   position: absolute;
   top: 0;
   left: 0;
@@ -1132,6 +1134,78 @@ iframe {
   height: 36px;
   flex-shrink: 0;
   transition: transform .2s;
+}
+
+/* Expertise page */
+.expertise-page .title-section .flex-container {
+  display: flex;
+  gap: 24px;
+  justify-content: space-between;
+}
+.expertise-page .title-section .title-wrapper {
+  width: 70%;
+}
+.expertise-page .title-section .expertise-subtitle {
+  margin: 0 0 20px 0;
+  font-size: 42px;
+  line-height: 1.1;
+}
+.expertise-page .title-section .expertise-description {
+  font-size: 24px;
+  line-height: 1.1;
+}
+.expertise-page .title-section .expertise-image {
+  width: 30%;
+  border-radius: 30px;
+  overflow: hidden;
+}
+.expertise-page .title-section .expertise-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.expertise-page .experts-section .experts {
+  display: flex;
+  padding: 60px;
+  border: 1px solid var(--blue-color);
+  border-radius: 30px;
+  background-color: var(--lightgrey-color);
+  gap: 24px;
+  justify-content: space-between;
+}
+.expertise-page .experts-section .experts-item {
+  width: 30%;
+}
+.expertise-page .experts-section .experts-item__title {
+  margin: 0 0 30px 0;
+  font-family: 'Roboto-Medium';
+  font-size: 32px;
+  color: var(--blue-color);
+}
+.expertise-page .experts-section .experts-item__description {
+  font-size: 20px;
+  line-height: 1.1;
+}
+.expertise-page .advantages-section .advantages-item__image {
+  width: 86px;
+  height: 86px;
+  margin: 0 auto 20px auto;
+}
+.expertise-page .advantages-section .advantages-item__image img {
+  width: 100%;
+}
+.expertise-page .advantages-section .advantages {
+  display: flex;
+  gap: 30px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.expertise-page .advantages-section .advantages-item {
+  width: 20%;
+}
+.expertise-page .advantages-section .advantages-item__title {
+  font-size: 18px;
+  text-align: center;
 }
 
 
