--- a/css/style.css
+++ b/css/style.css
@@ -1208,6 +1208,43 @@ iframe {
   text-align: center;
 }
 
+/* Faces page */
+.faces-page .faces {
+  display: grid;
+  gap: 24px;
+  grid-template-columns: repeat(2, 1fr);
+}
+.faces-page .faces-item {
+  display: flex;
+  gap: 40px;
+  justify-content: space-between;
+}
+.faces-page .faces-item .faces-item__photo {
+  width: 50%;
+  border: 1px solid var(--text-color);
+  border-radius: 20px;
+  overflow: hidden;
+}
+.faces-page .faces-item .faces-item__photo img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.faces-page .faces-item .faces-item__content {
+  width: 50%;
+}
+.faces-page .faces-item .faces-item__name {
+  margin: 0 0 20px 0;
+  font-family: 'Roboto-Bold';
+  font-size: 42px;
+  color: var(--blue-color);
+  line-height: 1.1;
+}
+.faces-page .faces-item .faces-item__position {
+  margin: 0 0 80px 0;
+  font-family: 'Roboto-Medium';
+  font-size: 20px;
+}
 
 
 /* footer */
