--- a/css/style.css
+++ b/css/style.css
@@ -346,7 +346,7 @@ iframe {
 
 /* Brands section */
 /*.brands-section .brands {*/
-.brands {
+.brands-section .brands {
   display: flex;
   padding: 40px;
   border-radius: 30px;
@@ -355,7 +355,7 @@ iframe {
   flex-wrap: wrap;
 }
 /*.brands-section .brands-item {*/
-.brands-item {
+.brands-section .brands-item {
   width: 355px;
   height: 200px;
   border-radius: 30px;
@@ -729,7 +729,7 @@ iframe {
   height: 600px;
   border-radius: 20px;
   overflow: hidden;
-}.
+}
 .events-section .events-item .events-item__title {
   position: absolute;
   top: 30px;
@@ -741,12 +741,12 @@ iframe {
   font-family: 'Roboto-Medium';
   font-size: 28px;
   color: var(--white-color);
-  line-height: 1.1;  
+  line-height: 1.1;
   z-index: 2;
   overflow: hidden;
   text-overflow: ellipsis;
   -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: vertical;*/
 }
 .events-section .events-item .events-item__image {
   height: 100%;
@@ -765,7 +765,7 @@ iframe {
   background: linear-gradient(0deg, rgba(34, 77, 143, 0.40) 0%, rgba(34, 77, 143, 0.40) 100%);
   z-index: 1;
 }
-.events-section .ep-item .full-link {
+.events-section .events-item .full-link {
   z-index: 2;
 }
 
@@ -1245,6 +1245,300 @@ iframe {
   font-family: 'Roboto-Medium';
   font-size: 20px;
 }
+
+/* About page */
+.about-page .columns-section .columns-wrapper {
+  position: relative;
+}
+.about-page .columns-section .columns {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+.about-page .columns-section .column-item {
+  display: flex;
+  flex-direction: column;
+  width: 19%;
+  padding: 40px 30px;
+  border-radius: 30px;
+  overflow: hidden;
+  background: linear-gradient(180deg, rgba(34, 77, 143, 0.00) 0%, rgba(34, 77, 143, 0.80) 100%);
+  justify-content: flex-end;
+}
+.about-page .columns-section .column-item__title {
+  font-family: 'Roboto-Bold';
+  font-size: 72px;
+  color: var(--blue-color);
+  line-height: 1.1;
+}
+.about-page .columns-section .column-item__text {
+  height: 80px;
+  font-family: 'Roboto-Bold';
+  font-size: 24px;
+  color: var(--white-color);
+  line-height: 1.1;
+}
+.about-page .columns-section .column-item1 {
+  height: 260px;
+}
+.about-page .columns-section .column-item2 {
+  height: 366px;
+}
+.about-page .columns-section .column-item3 {
+  height: 447px;
+}
+.about-page .columns-section .column-item4 {
+  height: 641px;
+}
+.about-page .columns-section .column-item5 {
+  height: 850px;
+}
+.about-page .columns-section .about-title {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.about-page .columns-section .company-name {
+  margin: 0 0 10px 0;
+  font-family: 'Roboto-SemiBold';
+  font-size: 64px;
+  color: var(--blue-color);
+  line-height: 1.1;
+}
+.about-page .columns-section .company-description {
+  font-family: 'Roboto-SemiBold';
+  font-size: 42px;
+  color: var(--text-color);
+  line-height: 1.1;
+}
+.about-page .directions-section .directions {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 24px;
+}
+.about-page .directions-section .directions-image-wrapper {
+  position: relative;
+  height: 580px;
+  margin: 0 0 20px 0;
+  border-radius: 20px;
+  overflow: hidden;
+}
+.about-page .directions-section .directions-item__image {
+  height: 100%;
+}
+.about-page .directions-section .directions-item__image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.about-page .directions-section .directions-item__filter {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, rgba(34, 77, 143, 0.40) 0%, rgba(34, 77, 143, 0.40) 100%);
+  z-index: 2;
+}
+.about-page .directions-section .directions-item__title {
+  margin: 0 0 10px 0;
+  font-family: 'Roboto-Bold';
+  font-size: 28px;
+  color: var(--text-color);
+}
+.about-page .directions-section .directions-item__description {
+  font-size: 18px;
+}
+.about-page .numbers-section .numbers {
+  display: grid;
+  gap: 24px;
+  grid-template-areas:
+    "A A B D"
+    "A A C D";
+}
+.about-page .numbers-section .numbers-item {
+  width: 100%;
+  padding: 60px;
+  border-radius: 30px;
+  overflow: hidden;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.about-page .numbers-section .numbers-item1 {
+  grid-area: A;
+  height: 100%;
+  background-image: url(../images/numbers-item-grid-a.jpg);
+}
+.about-page .numbers-section .numbers-item2 {
+  grid-area: B;
+  height: 270px;
+  background-image: url(../images/numbers-item-grid-b.jpg);
+}
+.about-page .numbers-section .numbers-item3 {
+  grid-area: C;
+  height: 270px;
+  background-image: url(../images/numbers-item-grid-c.jpg);
+}
+.about-page .numbers-section .numbers-item4 {
+  grid-area: D;
+  height: 100%;
+  background-image: url(../images/numbers-item-grid-d.jpg);
+}
+.about-page .numbers-section .numbers-item__title {
+  margin: 0 0 10px 0;
+  font-family: 'Roboto-Bold';
+  font-size: 72px;
+  color: var(--white-color);
+}
+.about-page .numbers-section .numbers-item__text {
+  font-family: 'Roboto-Bold';
+  font-size: 32px;
+  color: var(--white-color);
+}
+.about-page .history-section .history {
+  display: grid;
+  gap: 40px 24px;
+  grid-template-columns: repeat(3, 1fr);
+}
+.about-page .history-section .history-item__year {
+  margin: 0 0 10px 0;
+  font-family: 'Roboto-SemiBold';
+  font-size: 72px;
+  color: var(--blue-color);
+}
+.about-page .history-section .history-item__text {
+  font-size: 20px;
+}
+.about-page .faces-section .faces {
+  display: grid;
+  gap: 24px;
+  grid-template-columns: repeat(3, 1fr);
+}
+.about-page .faces-section .faces-item {
+  position: relative;
+  height: 680px;
+  border: 1px solid var(--text-color);
+  border-radius: 20px;
+  overflow: hidden;
+}
+.about-page .faces-section .faces-item__photo {
+  height: 100%;
+/*  background: linear-gradient(359deg, #FFF 15.29%, rgba(255, 255, 255, 0.00) 59.83%);*/
+/*background: linear-gradient(359deg, red 15.29%, green 59.83%);*/
+}
+.about-page .faces-section .faces-item__photo img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.about-page .faces-section .faces-item__name {
+  position: absolute;
+  left: 30px;
+  bottom: 85px;
+  font-family: 'Roboto-Bold';
+  font-size: 42px;
+  color: var(--blue-color);
+  line-height: 1.1;
+  z-index: 2;
+}
+.about-page .faces-section .faces-item__position {
+  position: absolute;
+  left: 30px;
+  bottom: 40px;
+  font-family: 'Roboto-Medium';
+  font-size: 20px;
+  z-index: 2;
+}
+.about-page .faces-section .faces-item__filter {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(360deg, #FFF 15%, rgba(255, 255, 255, 0.00) 60%);
+  z-index: 1;
+}
+.about-page .contacts-section .contacts {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.about-page .contacts-section .contacts-item {
+  padding: 40px;
+  border-radius: 20px;
+  overflow: hidden;
+}
+.about-page .contacts-section .contacts {
+  display: grid;
+  gap: 24px;
+  grid-template-columns: repeat(2, 1fr);
+}
+.about-page .contacts-section .contacts-item {
+  position: relative;
+  z-index: 1;
+}
+.about-page .contacts-section .contacts-item-left {
+  background-color: var(--blue-color);
+}
+.about-page .contacts-section .contacts-item-right {
+  background-color: var(--lightgrey-color);
+}
+.about-page .contacts-section .contacts-item__title {
+  margin: 0 0 65px 0;
+  font-family: 'Roboto-Bold';
+  font-size: 86px;
+}
+.about-page .contacts-section .contacts-item-left .contacts-item__title {
+  color: #F2F2F2;
+}
+.about-page .contacts-section .contacts-item-right .contacts-item__title {
+  color: var(--blue-color);
+}
+.about-page .contacts-section .flex-container {
+  display: flex;
+  margin: 0 0 80px 0;
+  gap: 24px;
+  justify-content: space-between;
+}
+.about-page .contacts-section .ac-item__title {
+  margin: 0 0 10px 0;
+  font-family: 'Roboto-SemiBold';
+  font-size: 32px;
+}
+.about-page .contacts-section .ac-item__text {
+  margin: 0 0 10px 0;
+  font-family: 'Roboto-Medium';
+  font-size: 24px;
+}
+.about-page .contacts-section .contacts-item-left {
+  color: var(--white-color);
+}
+.about-page .contacts-section .working-time-title {
+  margin: 0 0 10px 0;
+  font-family: 'Roboto-SemiBold';
+  font-size: 32px;
+}
+.about-page .contacts-section .working-time-hours {
+  margin: 0 0 20px 0;
+  font-family: 'Roboto-Medium';
+  font-size: 24px;
+}
+.about-page .contacts-section .working-time-days {
+  font-family: 'Roboto-Medium';
+  font-size: 24px;
+}
+.about-page .contacts-section .contacts-item__ellipse {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 472px;
+  height: 324px;
+  z-index: -1;
+}
+.about-page .contacts-section .contacts-item__ellipse img {
+  width: 100%;
+}
+
 
 
 /* footer */
