--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,6 @@ iframe {
   color: var(--blue-color);
 }
 
-
 /* Main section */
 .main-section {
   padding-top: 30px;
@@ -353,20 +352,27 @@ iframe {
   background-color: var(--lightgrey-color);
   gap: 20px;
   flex-wrap: wrap;
+  justify-content: center;
 }
 /*.brands-section .brands-item {*/
 .brands-section .brands-item {
   width: 355px;
   height: 200px;
+  padding: 10px;
   border-radius: 30px;
+  background-color: var(--white-color);
   overflow: hidden;
+}
+.brands-section .brands-item img {
+  width: 100%;
 }
 
 /* Complex solutions section */
 .complex-solutions-section .solutions {
   display: flex;
-  gap: 24px;
+  gap: 24px 0;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 .complex-solutions-section .solutions-item {
   position: relative;
@@ -375,12 +381,13 @@ iframe {
   border-radius: 30px;
   overflow: hidden;
   flex-shrink: 0;
+  z-index: 0;
 }
 .complex-solutions-section .solutions-item-wide {
-  width: 768px;
+  width: 49%;
 }
 .complex-solutions-section .solutions-item-slim {
-  width: 504px;
+  width: 32%;
 }
 .complex-solutions-section .solutions-item .solutions-item__title {
   margin: 0 0 20px 0;
@@ -439,6 +446,7 @@ iframe {
   position: absolute;
   right: 0;
   bottom: 0;
+  z-index: -1;
 }
 .complex-solutions-section .solutions-item-wide .solutions-item__image {
   width: 463px;
@@ -525,6 +533,9 @@ iframe {
 .callback-dealer-section .callback-dealer-form .callback-dealer-btn .callback-dealer-btn__image {
   width: 36px;
   height: 36px;
+}
+.callback-dealer-section .callback-dealer-image img {
+  width: 100%;
 }
 
 /* agreement text галочка соглашения */
@@ -746,7 +757,7 @@ iframe {
   overflow: hidden;
   text-overflow: ellipsis;
   -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;*/
+  -webkit-box-orient: vertical;
 }
 .events-section .events-item .events-item__image {
   height: 100%;
@@ -800,6 +811,9 @@ iframe {
   width: 48px;
   height: 48px;
   z-index: 3;
+}
+.category-section .categories-item .circle-right-down img {
+  width: 100%;
 }
 .category-section .categories-item .categories-item__title {
   position: absolute;
@@ -1874,10 +1888,6 @@ iframe {
   stroke: var(--blue-color);
 }  
 
-
-
-
-
 /* footer */
 .footer {
   padding: 60px 0 40px 0;
@@ -2491,13 +2501,559 @@ iframe {
   :root {
     --margin-120: 100px;
   }
+
+  .page-title,
+  .section-title {
+    font-size: 62px;
+  }
+
+  /* Main section */
+  .main-section .main-banner-title {
+    font-size: 46px;
+  }
+  .main-section .main-banner-subtitle {
+    font-size: 26px;
+  }
+
+  /* About section */
+  .about-section .about-description {
+    font-size: 38px;
+  }
+  .about-section .about-info .about-rectangle .about-rectangle__number {
+    font-size: 40px;
+  }
+
+  /* Category section Categories Home page and Catalog page */
+  .category-section .categories-item .categories-item__title {
+    font-size: 26px;
+  }
+  .category-section .categories-item .circle-right-down {
+    width: 43px;
+    height: 43px;
+  }
+
+  /* Complex solutions section */
+  .complex-solutions-section .solutions-item-slim .solutions-btn {
+    right: 30px;
+    width: 43px;
+    height: 43px;
+  }
+  .complex-solutions-section .solutions-item .solutions-item__title {
+    font-size: 30px;
+  }
+
+  /* News section Home page and News page */
+  .news-section .news-item .news-item__title {
+    height: 53px;
+    font-size: 22px;
+  }
+
+  /* Events section */
+  .events-section .events-item .events-item__title {
+    height: 53px;
+    padding: 0 25px;
+    font-size: 24px;
+  }
+
+  /* footer */
+  .footer .footer-menu .address-wrapper .phone,
+  .footer .footer-menu .address-wrapper .address {
+    font-size: 26px;
+  }
+  .footer .socials .socials-item {
+    width: 80px;
+    height: 49px;
+  }
 }
 
 @media only screen and (max-width : 1400px) {
 
+  :root {
+    --margin-120: 80px;
+  }
+
+  .page-title,
+  .section-title {
+    margin-bottom: 35px;
+    font-size: 58px;
+  }
+
+  /* Header */
+  .header {
+   padding: 26px 0;
+  }
+  .header .flex-container {
+    gap: 25px;
+  }
+  .header .logo {
+    width: 112px;
+    height: 58px;
+  }
+  .header .catalog-btn {
+    width: 186px;
+    height: 58px;
+    gap: 15px;
+  }
+  .header .catalog-btn .catalog-btn__text {
+    font-size: 20px;
+  }
+  .header .catalog-btn .catalog-btn__image {
+    width: 30px;
+    height: 30px;
+  }
+  .header .search-form .search-input {
+    height: 58px;
+    padding: 16px 25px;
+    font-size: 16px;
+  }
+  .header .search-form .search-submit-btn {
+    width: 58px;
+    height: 58px;
+  }
+  .header .header-contacts .tp-item {
+    width: 58px;
+    height: 58px;
+  }
+  .header .top-menu .menu-item__link {
+    font-size: 17px;
+  }
+
+  /* Main section */
+  .main-section .main-banner-title {
+    font-size: 42px;
+  }
+  .main-section .main-banner-subtitle {
+    font-size: 22px;
+  }
+  .main-section .catalog-btn {
+    width: 300px;
+    height: 58px;
+  }
+  .main-section .catalog-btn .catalog-btn__text {
+    font-size: 22px;
+  }
+
+  /* About section */
+  .about-section .about-description {
+    font-size: 34px;
+  }
+  .about-section .about-info .about-rectangle {
+    padding: 25px;
+  }
+  .about-section .about-info .about-rectangle .about-rectangle__number {
+    font-size: 36px;
+  }
+  .about-section .about-info .about-rectangle .about-rectangle__title {
+    font-size: 22px;
+  }
+
+  /* Category section Categories Home page and Catalog page */
+  .category-section .categories-item .categories-item__title {
+    bottom: 25px;
+    padding: 0 25px;
+    font-size: 24px;
+  }
+  .category-section .categories-item .circle-right-down {
+    width: 38px;
+    height: 38px;
+  }
+  .category-section .categories {
+    gap: 24px 0;
+  }
+  .category-section .categories-item {
+    border-radius: 25px;
+  }
+
+  /* Complex solutions section */
+  .complex-solutions-section .solutions {
+    gap: 12px 0;
+  }
+  .complex-solutions-section .solutions-item-wide {
+    width: 49.5%;
+  }
+  .complex-solutions-section .solutions-item-slim {
+    width: 32.5%;
+  }
+  .complex-solutions-section .solutions-item {
+    padding: 25px;
+    border-radius: 25px;
+  }
+  .complex-solutions-section .solutions-item .solutions-item__description {
+    width: 100%;
+  }
+  .complex-solutions-section .solutions-item-slim .solutions-btn {
+    top: 19px;
+    right: 25px;
+    width: 38px;
+    height: 38px;
+  }
+  .complex-solutions-section .solutions-item .solutions-item__title {
+    font-size: 26px;
+  }
+  .complex-solutions-section .solutions-item-wide .solutions-btn {
+    width: 260px;
+    height: 58px;
+  }
+  .complex-solutions-section .solutions-btn .solutions-btn__text {
+    font-size: 18px;
+  }
+
+  /* Callback dealer section */
+  .callback-dealer-section .callback-dealer {
+    padding: 50px;
+  }
+  .callback-dealer-section .flex-container {
+    gap: 40px;
+  }
+  .callback-dealer-section .callback-dealer-form {
+    width: 70%;
+  }
+  .callback-dealer-section .callback-dealer-image {
+    width: 26%;
+  }
+  .callback-dealer-section .callback-dealer-form .form-flex-container {
+    gap: 16px;
+  }
+  .callback-dealer-section .callback-dealer-form .input-field {
+    height: 55px;
+    padding: 15px 30px;
+    font-size: 16px;
+  }
+  .callback-dealer-section .callback-dealer-form .callback-dealer-btn .callback-dealer-btn__text {
+    font-size: 22px;
+  }
+  .callback-dealer-section .callback-dealer-form .callback-dealer-btn .callback-dealer-btn__image {
+    width: 30px;
+    height: 30px;
+  }
+
+  /* agreement text галочка соглашения */
+  .agreement-text .custom-checkbox + label::before {
+    width: 18px;
+    height: 18px;
+  }
+
+  /* Brands section */
+  .brands-section .brands-item {
+    width: 320px;
+    height: 180px;
+  }
+
+  /* News section Home page and News page */
+  .news-section .news-item .news-item__content {
+    border-radius: 25px;
+  }
+  .news-section .news-item .news-item__btn .news-item__text {
+    font-size: 16px;
+  }
+  .news-section .news-item .news-item__btn {
+    width: 210px;
+    height: 50px;
+  }
+  .news-section .news-item .news-item__date {
+    top: 25px;
+    left: 25px;
+  }
+  .news-section .news-item .news-item__type {
+    top: 25px;
+    right: 25px;
+  }
+  .news-section .news-item .news-item__btn {
+    bottom: 25px;
+    right: 25px;
+  }
+  .news-section .news-item .news-item__title {
+    height: 48px;
+    font-size: 20px;
+  }
+
+  /* Events section */
+  .events-section .events-item {
+    height: 500px;
+  }
+  .events-section .events-item .events-item__title {
+    top: 25px;
+    height: 49px;
+    padding: 0 20px;
+    font-size: 22px;
+  }
+
+  /* footer */
+  .footer .footer-menu .address-wrapper .phone,
+  .footer .footer-menu .address-wrapper .address {
+    font-size: 24px;
+  }
+  .footer .logo {
+    width: 140px;
+  }
+  .footer .footer-text .text {
+    width: 50%;
+  }
+  .footer .footer-text .required-links .link {
+    font-size: 16px;
+  }
+
 }
 
 @media only screen and (max-width : 1200px) {
+
+  :root {
+    --margin-120: 60px;
+  }
+
+  .page-title,
+  .section-title {
+    margin-bottom: 25px;
+    font-size: 54px;
+  }
+
+  /* Header */
+  .header .flex-container {
+    margin-bottom: 20px;
+  }
+  .header .logo {
+    width: 97px;
+    height: 50px;
+  }
+  .header .catalog-btn {
+    width: 170px;
+    height: 50px;
+  }
+  .header .catalog-btn .catalog-btn__text {
+    font-size: 18px;
+  }
+  .header .search-form .search-input {
+    height: 50px;
+    padding: 12px 20px;
+  }
+   .header .search-form .search-submit-btn {
+    width: 50px;
+    height: 50px;
+  }
+   .header .header-contacts .tp-item {
+    width: 50px;
+    height: 50px;
+  }
+  .header .top-menu .menu-item__link {
+    font-size: 16px;
+  }
+
+  /* Main section */
+  .main-section {
+    padding-top: 20px;
+  }
+  .main-section .main-banner {
+    height: 350px;
+    padding: 40px 50px;
+    border-radius: 20px;
+  }
+  .main-section .main-banner-title {
+    font-size: 38px;
+  }
+  .main-section .main-banner-subtitle {
+    font-size: 20px;
+  }
+  .main-section .catalog-btn {
+    width: 270px;
+    height: 50px;
+  }
+  .main-section .catalog-btn .catalog-btn__text {
+    font-size: 20px;
+  }
+
+  /* About section */
+  .about-section .about-description {
+    font-size: 30px;
+  }
+  .about-section .about-info {
+    gap: 15px;
+  }
+  .about-section .about-info .about-rectangle {
+    padding: 20px;
+    border-radius: 20px;
+  }
+  .about-section .about-info .about-rectangle .about-rectangle__number {
+    font-size: 32px;
+  }
+  .about-section .about-info .about-rectangle .about-rectangle__title {
+    font-size: 20px;
+  }
+  .about-section .about-btn {
+    width: 226px;
+    height: 50px;
+  }
+  .about-section .about-btn .about-btn__text {
+    font-size: 22px;
+  }
+
+  /* Category section Categories Home page and Catalog page */
+  .category-section .categories {
+    gap: 12px 0;
+  }
+  .category-section .categories-item {
+    width: 24%;
+    height: 280px;
+  }
+  .category-section .categories-item-wide {
+    width: 49.3%;
+  }
+  .category-section .categories-item .categories-item__title {
+    bottom: 20px;
+    padding: 0 20px;
+    font-size: 20px;
+  }
+   .category-section .categories-item .circle-right-down {
+    width: 30px;
+    height: 30px;
+  }
+
+  /* Brands section */
+  .brands-section .brands {
+    padding: 30px;
+    border-radius: 20px;
+    gap: 15px;
+  }
+  .brands-section .brands-item {
+    width: 30%;
+    height: 150px;
+    border-radius: 20px;
+  }
+
+  /* Complex solutions section */
+  .complex-solutions-section .solutions-item-wide .solutions-btn {
+    width: 230px;
+    height: 50px;
+  }
+  .complex-solutions-section .solutions-btn .solutions-btn__text {
+    font-size: 16px;
+  }
+  .complex-solutions-section .solutions-item-slim .solutions-btn {
+    width: 30px;
+    height: 30px;
+  }
+  .complex-solutions-section .solutions-item .solutions-item__title {
+    font-size: 22px;
+  }
+  .complex-solutions-section .solutions-item .solutions-item__description {
+    font-size: 16px;
+  }
+   .complex-solutions-section .solutions-item {
+    padding: 25px 20px;
+    border-radius: 20px;
+  }
+  .complex-solutions-section .solutions-item-slim .solutions-btn {
+    top: 22px;
+    right: 20px;
+    width: 30px;
+    height: 30px;
+  }
+
+  /* Callback dealer section */
+  .callback-dealer-section .callback-dealer {
+    padding: 40px 30px;
+  }
+  .callback-dealer-section .callback-dealer__description {
+    margin-bottom: 40px;
+  }
+  .callback-dealer-section .callback-dealer-form .input-field {
+    height: 50px;
+    padding: 10px 20px;
+    font-size: 15px;
+  }
+  .callback-dealer-section .callback-dealer-form .callback-dealer-btn .callback-dealer-btn__text {
+    font-size: 18px;
+  }
+  .callback-dealer-section .callback-dealer-form .left {
+    width: 88%;
+  }
+  .callback-dealer-section .callback-dealer-form .form-flex-container {
+    gap: 12px;
+  }
+
+
+  /* agreement text галочка соглашения */
+  .agreement-text .custom-checkbox + label::before {
+    width: 16px;
+    height: 16px;
+    margin: 0 5px 0 0;
+  }
+  .agreement-text {
+    font-size: 13px;
+    line-height: 1.4;
+  }
+  .agreement-text a {
+    font-size: 13px;
+  }
+
+  /* News section Home page and News page */
+  .news-section .news-item .news-item__date {
+    top: 20px;
+    left: 20px;
+    width: 120px;
+    height: 35px;
+    border-radius: 10px;
+    font-size: 14px;
+  }
+  .news-section .news-item .news-item__date::before {
+    width: 10px;
+    height: 10px;
+  }
+  .news-section .news-item .news-item__type {
+    top: 20px;
+    right: 20px;
+    width: 95px;
+    height: 35px;
+    border-radius: 10px;
+    font-size: 14px;
+  }
+  .news-section .news-item .news-item__type::before {
+    width: 10px;
+    height: 10px;
+  }
+  .news-section .news-item .news-item__btn .news-item__text {
+    font-size: 15px;
+  }
+  .news-section .news-item .news-item__btn .news-item__image {
+    width: 30px;
+    height: 30px;
+  }
+  .news-section .news-item .news-item__btn {
+    bottom: 20px;
+    right: 20px;
+    width: 190px;
+    height: 45px;
+  }
+  .news-section .news-item .news-item__content {
+    height: 270px;
+    margin-bottom: 20px;
+    border-radius: 20px;
+  }
+  .news-section .news-item .news-item__title {
+    height: 44px;
+    font-size: 18px;
+  }
+
+  /* Events section */
+  .events-section .events-item {
+    height: 400px;
+  }
+
+  /* footer */
+  .footer .logo {
+    width: 120px;
+  }
+  .footer .socials .socials-item {
+    width: 72px;
+    height: 44px;
+  }
+  .footer .footer-menu .address-wrapper .phone,
+  .footer .footer-menu .address-wrapper .address {
+    font-size: 22px;
+  }
+  .footer .footer-menu .menu .menu-title {
+    font-size: 18px;
+  }
+
 
   /* We use cookie */
   .we-use-cookie .we-use-cookie-wrapper {
@@ -2507,6 +3063,84 @@ iframe {
 
 @media only screen and (max-width : 992px) {
 
+  :root {
+    --margin-120: 40px;
+  }
+
+  .page-title,
+  .section-title {
+    margin-bottom: 20px;
+    font-size: 48px;
+  }
+
+  /* About section */
+  .about-section .about-description {
+    font-size: 26px;
+  }
+  .about-section .about-info {
+    gap: 10px;
+  }
+  .about-section .about-info .about-rectangle {
+    padding: 15px;
+  }
+  .about-section .about-info .about-rectangle .about-rectangle__number {
+    font-size: 28px;
+  }
+  .about-section .about-info .about-rectangle .about-rectangle__title {
+    font-size: 18px;
+  }
+
+  /* Category section Categories Home page and Catalog page */
+  .category-section .categories-item {
+    width: 49%;
+  }
+  .category-section .categories-item-wide {
+    width: 100%;
+  }
+
+  /* Brands section */
+  .brands-section .brands {
+    padding: 25px;
+    border-radius: 15px;
+  }
+  .brands-section .brands-item {
+    height: 120px;
+  }
+
+  /* Callback dealer section */
+  .callback-dealer-section .callback-dealer {
+    padding: 25px 25px;
+  }
+  .callback-dealer-section .callback-dealer-image {
+    display: none;
+  }
+  .callback-dealer-section .callback-dealer-form {
+    width: 100%;
+  }
+  .callback-dealer-section .callback-dealer__description {
+    margin-bottom: 30px;
+    font-size: 16px;
+  }
+  .callback-dealer-section .callback-dealer-form .callback-dealer-btn {
+    height: 50px;
+  }
+  .callback-dealer-section .callback-dealer-form .callback-dealer-btn .callback-dealer-btn__text {
+    font-size: 17px;
+  }
+  .callback-dealer-section .callback-dealer-form .input-field {
+    height: 45px;
+  }
+
+  /* agreement text галочка соглашения */
+  .agreement-text {
+    margin: 10px 0;
+  }
+
+  /* Events section */
+  .events-section .events {
+    gap: 16px;
+    grid-template-columns: repeat(2, 1fr);
+  }
 
   /* to top */
   .to-top {
